--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -510,6 +510,7 @@ noinst_HEADERS = \
 	tm-threads-common.h \
 	tm-threads.h \
 	tree.h \
+	interval-tree.h \
 	unix-manager.h \
 	util-action.h \
 	util-affinity.h \
