--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -121,6 +121,7 @@ noinst_HEADERS = \
 	detect-dnp3.h \
 	detect-dns-answer-name.h \
 	detect-dns-opcode.h \
+	detect-dns-rrtype.h \
 	detect-dns-query.h \
 	detect-dns-query-name.h \
 	detect-dsize.h \
@@ -741,6 +742,7 @@ libsuricata_c_a_SOURCES = \
 	detect-dnp3.c \
 	detect-dns-answer-name.c \
 	detect-dns-opcode.c \
+	detect-dns-rrtype.c \
 	detect-dns-query.c \
 	detect-dns-query-name.c \
 	detect-dsize.c \
