example/plugins: adapt for new directory layout
- change headers to "libsuricata/..."
- don't require Suricata to be build in shared mode, as its an
  artificial requirement imposed
- add comments to the Makefile for building out of tree

Ticket: #6754

--- a/Makefile.am
+++ b/Makefile.am
@@ -7,10 +7,10 @@ EXTRA_DIST = ChangeLog COPYING LICENSE suricata.yaml.in \
              $(SURICATA_UPDATE_DIR) \
 	     lua \
 	     acsite.m4 \
-	     scripts/generate-images.sh
+	     scripts/generate-images.sh \
+	     examples
 SUBDIRS = $(HTP_DIR) rust libsuricata qa rules doc contrib etc python ebpf \
           $(SURICATA_UPDATE_DIR)
-DIST_SUBDIRS = examples/plugins/c-json-filetype $(SUBDIRS)
 
 CLEANFILES = stamp-h[0-9]*
 
