github-ci: use all cores available
GitHub action Linux runners now have 4 cores, instead of hardcoding
the number, use nproc to determine how many cores are available and
use them.

--- a/.github/workflows/build-centos-7.yml
+++ b/.github/workflows/build-centos-7.yml
@@ -40,6 +40,9 @@ jobs:
           path: /var/cache/yum
           key: ${{ github.job }}-yum
 
+      - name: Determine number of CPUs
+        run: echo CPUS=$(nproc --all) >> $GITHUB_ENV
+
       - run: |
           yum -y install epel-release
           yum -y install \
